--- a/styles/main.css
+++ b/styles/main.css
@@ -2,13 +2,15 @@ body {
     border-top: 5px solid #607079;
 }
 .blog-post {
-    margin: 100px;
+    margin: 300px;
     margin-top: 50px;
+    margin-bottom: 50px;
+
 }
 
 .col-4 {
     margin-top: 20px;
-    margin-left: 100px;
+    margin-left: 300px;
 }
 
 .blog-footer {
